# milieux

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  ruff.toml  vermin.ini
.github/workflows/: workflow.yml
milieux/: __init__.py  config.py  distro.py  doc.py  doc_template.yml.jinja  env.py  errors.py  package.py  utils.py
milieux/.config/: example_config.toml
milieux/cli/: __init__.py  config.py  distro.py  doc.py  env.py  main.py  scaffold.py
milieux/doc/: __init__.py  doc_template.yml.jinja  extra.css.jinja  home_template.md.jinja
milieux/doc/hooks/: clean_search_html.py
tests/: __init__.py  conftest.py  test_config.py  test_distro.py  test_doc.py  test_env.py  test_main.py  test_package.py  test_utils.py
tests/data/: activate.jinja  activate.out
